# avalon

./: .dockerignore  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  excluded.txt  mypy.ini  pyproject.toml  pytest.ini  requirements_frozen.txt  root_dir_marker.txt  setup.py
agent/: action_model.py  dataloader.py  evaluation.py  godot_gym.py  observation_model.py  storage.py  worker.py  wrappers.py
agent/ppo/: envs.py  evaluation.py  gae.py  main.py  model.py  params.py  ppo.py  readme.md  wandb_lib.py
agent/random/: evaluation.py
agent/torchbeast/: atari_wrappers.py  avalon_helpers.py  evaluation.py  model.py  monobeast.py  polybeast.py  polybeast_env.py  polybeast_learner.py
avalon/: for_humans.py  install_godot_binary.py
avalon/agent/: train_dreamer_atari.py  train_dreamer_avalon.py  train_dreamer_dmc.py  train_dreamer_test_envs.py  train_ppo_avalon.py  train_ppo_procgen.py  train_ppo_test_envs.py
avalon/common/: check_install.py  error_utils.py  hacks.py  imports.py  init_utils.py  log_utils.py  mypy_torch_plugin_test.py  notebook_utils.py  run_mypy.sh  test_style.py  test_types.py  tqdm_hacks.py  tqdm_utils.py  transform_utils.py  type_utils.py  utils.py  visual_utils.py  wandb_serialization.py  wandb_utils.py
avalon/contest/: README.md  contest_params.py  eval.py
avalon/contrib/: aws_auth.py  s3_utils.py  serialization.py  testing_utils.py  utils.py
avalon/datagen/: README.md  data_config.py  env_helper.py  errors.py  generate.py  generate_apks.py  generate_godot_code.py  generate_worlds.py  godot_base_types.py  godot_generated_types.py  godot_utils.py  human_playback.py
avalon/server/: .gitignore  README.md  app.py  server_state.py  test_server_state.py
common/: callbacks.py  debug_utils.py  error_utils.py  errors.py  even_earlier_hacks.py  hacks.py  imports.py  init_utils.py  log_utils.py  mypy.ini  mypy_torch_plugin.py  notebook_dashboard.py  notebook_utils.py  process_utils.py  run_mypy.sh  test_style.py  test_types.py  tqdm_hacks.py  tqdm_utils.py  transform_utils.py  type_utils.py  utils.py  visual_utils.py  wandb_serialization.py  wandb_utils.py
common/slack_service/: __init__.py  utils.py  write.py
contrib/: s3_utils.py  serialization.py  testing_utils.py  utils.py
datagen/: README.md  data_config.py  env_helper.py  errors.py  generate.py  generate_apks.py  generate_godot_code.py  generate_worlds.py  godot_base_types.py  godot_env.py  godot_generated_types.py  godot_utils.py  human_playback.py
datagen/avalon_server/: app.py  requirements.txt  test_server_state.py
datagen/godot/: .gitignore  README.md  config.json  datagen.sh  (+4 more)
docker/: 00_apt_install.sh  01_user_config.sh  20_pip_torch.sh  20_requirements.txt  21_pip_install.sh  21_requirements.txt  40_apt_extras.sh  41_pip_extras.sh  50_godot.sh  80_temporary_fixes.sh  99_container_main.sh  Dockerfile  gl_setup.sh  godot_install.sh
docker_torchbeast/: 90_apt_sources.sh  90_cuda_11.sh  90_cudnn_8.sh  90_torchbeast.sh  Dockerfile
docs/: avalon_baselines.md  checkpoints.md  running_in_vr.md
notebooks/: avalon_results.sync.ipynb  avalon_results.sync.py  avalon_simplest_example.sync.py  create_human_scores.sync.ipynb  create_human_scores.sync.py  create_oculus_build.sync.ipynb  create_oculus_build.sync.py  create_simple_world.sync.ipynb  create_simple_world.sync.py  evaluate_worlds.sync.ipynb  evaluate_worlds.sync.py  gym_interface_example.sync.ipynb  gym_interface_example.sync.py  inspecting_test_worlds.sync.ipynb  inspecting_test_worlds.sync.py  overview.sync.py  rllib_tutorial.sync.ipynb  rllib_tutorial.sync.py  run_tests.ipynb
scripts/: apk.sh  build_and_publish.sh  check_install.py  ppo.sh  update_changelog.py
(+921 files in other folders)
