[build-system]
requires = ["setuptools >= 62.4.0", "setuptools_scm[toml] >= 7.0.5"]

[project]
name = "avalon-rl"
version = "1.0.1"
readme = "README.md"
license = {"file" = "LICENSE"}
description = "Avalon: A Benchmark for RL Generalization Using Procedurally Generated Worlds"
authors = [
  {name = "Generally Intelligent", email = "avalon@generallyintelligent.com"}
]

requires-python = ">=3.9"
dependencies = [
  "attrs >= 21.4.0",
  "boto3 >= 1.20.47",
  "einops >= 0.3.2",
  "godot-parser >= 0.1.6",
  "gym == 0.25.2",
  "IPython >= 8.5.0",
  "loguru >= 0.6.0",
  "matplotlib >= 3.5.1",
  "moviepy >= 1.0.3",
  "networkx >= 2.6.3",
  "nptyping >= 2.0.1",
  "numpy >= 1.22.2",
  "openturns >= 1.19",  # 1.19post1 has broken mac builds, don't require it
  "Pillow >= 9.0.1",
  "psutil >= 5.9.0",
  "requests >= 2.27.1",
  "rliable >= 1.0.7",
  "scipy >= 1.9.2, != 1.10.0", # 1.10.0 has this bug: https://github.com/scipy/scipy/issues/17716
  "sentry-sdk >= 1.5.4",
  "scikit-image >= 0.19.3",
  "sh >= 1.14.2",
  "shapely >= 1.7.0",
  "tqdm >= 4.62.3",
  "trimesh[easy] >= 3.15.5",
  "wandb >= 0.12.21",
  "moviepy >= 1.0.3",
  "imageio >= 2.15.0",
  "fire >= 0.4.0"
]

[project.optional-dependencies]
dev = [
  "deepdiff >= 5.8.1",
  "jupyter-ascending >= 0.1.23",
  "mypy >= 0.971",
  "notebook >= 6.4.8",
  "pytest >= 6.2.5",
  "pytest-forked >= 1.4.0",
  "pytest-integration >= 0.2.2",
  "pytest-xdist >= 2.5.0",
  "seaborn >= 0.11.2",
  "tabulate >= 0.8.9",
  "types-futures >= 3.3.8",
  "types-protobuf >= 3.19.4",
  "types-requests >= 2.27.1",
  "types-setuptools >= 57.4.9",
  "types-six >= 1.16.0",
  "types-tabulate >= 0.8.5",
  "types-toml >= 0.10.2",
  "types-urllib3 >= 1.26.9",
  "typing_extensions >= 4.1.1",
  "torch >= 1.12.0",
]
train = [
  "dm-tree >= 0.1.7",
  "torch >= 1.12.0",
  "torchvision >= 0.13.0",
]


[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
avalon = ["*py.typed"]
